--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,54 +5,102 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col"></div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
+    <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <br><br>
+                <h1 class="header center red-text text-darken-4">Hits 'n' Hops</h1>
+                <div class="row center">
+                    <h5 class="col s12 white-text">A Beer and Vinyl club with new recommendations every month!</h5>
+                </div>
+                <div class="row center">
+                    <a href="#" id="membership-button" class="btn-large waves-effect waves-light red darken-4">Join Us!</a>
+                </div>
+                <br><br>
+            </div>
+        </div>
+        <div class="parallax"><img src="{% static 'images/hnhbackground.png' %}" alt="Beer Background"></div>
+    </div>    
+
     <div class="container">
-    <div class="section">
+        <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="red-text large material-icons">store</i></h2>
-            <h5 class="center">Browse our collections</h5>
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m6 l4">
+                    <div class="icon-block">
+                        <h2 class="center"><i class="material-icons">group</i></h2>
+                        <h5 class="center header red-text text-darken-4">Meet New Friends</h5>
 
-            <p class="center light">Check out our latest beers and newest records, plenty of delightful sounds and plenty to wash it down!</p>
-          </div>
-          <div class="cta-container center-align">
-            <a href="" class="waves-effect btn">Shop Now!</a>
-          </div>
+                        <p class="light">Explore and meet new people through your shared love of beer and music,
+                                organise gigs or tasting nights.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col s12 m6 l4">
+                    <div class="icon-block">
+                        <h2 class="center"><i class="material-icons">album</i></h2>
+                        <h5 class="center header red-text text-darken-4">New Monthly Music</h5>
+
+                        <p class="light">Every Month we look to put our members in touch with some of the
+                                best music around and make sure you can share it with friends and family.
+                                Our monthly picks are sent out to members along with 2 of their favourite beers. 
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col s12 l4">
+                    <div class="icon-block">
+                        <h2 class="center"><i class="material-icons">forum</i></h2>
+                        <h5 class="center header red-text text-darken-4">Discuss Your Favourites</h5>
+
+                        <p class="light">Chat to friends about all things beer and music. Use our forums or
+                                or listening party service to discover, dance and drink your troubles away!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="red-text large material-icons">card_membership</i></h2>
-            <h5 class="center">Become a Member</h5>
-
-            <p class="center light">Join Wax World to receive 10% off all orders with free next day delivery and more...</p>
-          </div>
-          <div class="cta-container center-align">
-            <a href="" class="waves-effect btn">Join us!</a>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="red-text large material-icons">headset</i></h2>
-            <h5 class="center">Connect with friends</h5>
-
-            <p class="center light">Meet new like-minded people and share your favourite records with a complementary beer using our listening party service.</p>
-          </div>
-          <div class="cta-container center-align">
-            <a href="" class="waves-effect teal btn">Meet Friends!</a>
-          </div>
-        </div>
-      </div>
-
     </div>
-  </div>
+
+    <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row center">
+                    <div class="col l4 offset-l7 m6 offset-m6 s12">
+                        <div>
+                            <h5 class="header right">Become a member to recieve free delivery with all orders.</h5>
+                        </div>
+                        <div>
+                            <a href="#" id="membership-button2" class="btn waves-effect waves-light red darken-4">Join the Club!</a>
+                        </div>                    
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="parallax"><img src="{% static 'images/hnhbackground2.png' %}" alt="Unsplashed background img 2"></div>
+    </div>
+
+    <div class="container">
+        <div class="section">
+            <div class="row">
+                <div class="col s12 center">
+                    <h3><i class="mdi-content-send header"></i></h3>
+                    <h4>Contact Us</h4>
+                    <p class="left-align light">If you wish to contact us regarding memberships, purchases or returns please email us at
+                                    customer.service@hitsnhops.com or phone us on 07894241236. We always look to resolve any issues promptly
+                                    and with our members in mind so anything we can do to help you is our pleasure. 
+                    </p>
+                </div>
+            </div>
+
+            </div>
+        </div>
 {% endblock %}
