--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
       {% endblock %}
 
       {% block corejs %}
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       {% endblock %}
 
@@ -30,28 +31,95 @@
       <title>Hit 'n' Hops {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
-        <header class="container nav-wrapper">
-            <div id="topnav" class="row white hide-on-small-only">
-                <div class="col s12 l4">
-                    <a href="{% url 'home' %}" class="logo">
-                        <img src="{% static 'images/hnhlogo.png' %}" alt="logo"/>
-                    </a>
-                </div>
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+                <a href="{% url 'home' %}" class="logo hide-on-med-and-down">
+                    <img src="{% static 'images/hnhlogo.png' %}" alt="logo"/>
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <form method="GET" action="#">
+                            <div class="input-group">
+                                <input class="form-control" id="search" name="q" placeholder="Explore..." type="search" required>
+                                
+                            </div>
+                        </form>
+                    </li>
+                    <li>
+                        <a class="dropdown-trigger" href="#" data-target="dropdown1"><i class="material-icons">person</i></a>
+                    </li>
+                    <li>
+                        <a class="{% if grand_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link" href="#">
+                            <div class="center">
+                                <div>
+                                    <i class="material-icons">shopping_basket</i>
+                                </div>
+                                <p class="my-0">
+                                    {% if grand_total %}
+                                        £{{ grand_total|floatformat:2 }}
+                                    {% else %}
+                                    {% endif %}
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <ul id="slide-out" class="sidenav">
+                    <li>
+                        <form method="GET" action="#">
+                            <div class="input-group">
+                                <input class="form-control" id="search1" name="q" placeholder="Explore..." type="search" required>
+                                
+                            </div>
+                        </form>
+                    </li>
+                    <li>
+                        <a class="dropdown-trigger text-black" href="#" data-target="dropdown2"><i class="material-icons">person</i>My Account</a>
+                    </li>
+                    <li>
+                        <a class="{% if grand_total %} text-blue font-weight-bold {% else %} text-black {% endif %} nav-link" href="#">
+                            <i class="material-icons">shopping_basket</i>My Basket
+                            <p class="my-0">
+                                {% if grand_total %}
+                                    £{{ grand_total|floatformat:2 }}
+                                {% else %}
+                                {% endif %}
+                            </p>
+                        </a>    
+                    </li>
+       
+                </ul>
                 
-                <div class="col s12 l4">
-                    <form method="GET" action="">
-                        <div class="input-field">
-                            <input id="search" type="search" required>
-                            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                            <i class="material-icons">close</i>
-                        </div>
-                    </form>    
-                </div>
-                <div class="col s12 l4">
-
-                </div>
+                <a href="#" data-target="slide-out" class="sidenav-trigger"><img src="{% static 'images/hnhlogo.png' %}" alt="logo"/></a>
+                <!-- Dropdown Structure -->
+                <ul id="dropdown1" class="dropdown-content">
+                    {% if request.user.is.authenticated %}
+                    {% if request.user.is.superuser %}
+                        <a href="" class="dropdown-item">Product Management</a>
+                    {% endif %}
+                        <a href="" class="dropdown-item">My Profile</a>
+                        <a href="{% url 'account_logout' %]" class="dropdown-item">Log Out</a>
+                    {% else %}
+                        <a href="{% url 'account_signup' %]" class="dropdown-item"><span>Register</span></a>
+                        <a href="{% url 'account_login' %]" class="dropdown-item"><span>Log In</span></a>
+                    {% endif %}
+                </ul>
+                <ul id="dropdown2" class="dropdown-content">
+                    {% if request.user.is.authenticated %}
+                    {% if request.user.is.superuser %}
+                        <a href="" class="dropdown-item">Product Management</a>
+                    {% endif %}
+                        <a href="" class="dropdown-item">My Profile</a>
+                        <a href="{% url 'account_logout' %]" class="dropdown-item">Log Out</a>
+                    {% else %}
+                        <a href="{% url 'account_signup' %]" class="dropdown-item">Register</a>
+                        <a href="{% url 'account_login' %]" class="dropdown-item">Log In</a>
+                    {% endif %}
+                </ul>
             </div>
-        </header>
+        </nav>
+
+        
 
         {% if messages %}
             <div class="message-container"></div>
@@ -63,12 +131,45 @@
         {% block content %}
         {% endblock %}
 
-        {% block postloadjs %}
-            <script>
-                M.AutoInit()
-            </script>
-        {% endblock %}
-    
+        <footer class="page-footer teal">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Company Bio</h5>
+                        <p class="grey-text text-lighten-4">We are a team of college students working on this project like
+                                it's our full time job. Any amount would help support and continue development on this project
+                                and is greatly appreciated.
+                        </p>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Settings</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Link 1</a></li>
+                        <li><a class="white-text" href="#!">Link 2</a></li>
+                        <li><a class="white-text" href="#!">Link 3</a></li>
+                        <li><a class="white-text" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Connect</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Link 1</a></li>
+                        <li><a class="white-text" href="#!">Link 2</a></li>
+                        <li><a class="white-text" href="#!">Link 3</a></li>
+                        <li><a class="white-text" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+        <div class="container">
+            Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        </div>
+    </div>
+</footer>
 
+        {% block postloadjs %}
+            <script src="{% static 'js/base.js' %}"></script>
+        {% endblock %}
     </body>
-  </html>
+</html>
