added beers, styles and breweries to products app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,10 +18,10 @@
                 <div class="row center">
                     <h5 class="col s12 white-text">A Beer and Vinyl club with new recommendations every month!</h5>
                 </div>
+                <br><br>
                 <div class="row center">
                     <a href="#" id="membership-button" class="btn-large waves-effect waves-light red darken-4">Join Us!</a>
                 </div>
-                <br><br>
             </div>
         </div>
         <div class="parallax"><img src="{% static 'images/hnhbackground.png' %}" alt="Beer Background"></div>
@@ -46,7 +46,7 @@
                 <div class="col s12 m6 l4">
                     <div class="icon-block">
                         <h2 class="center"><i class="material-icons">album</i></h2>
-                        <h5 class="center header red-text text-darken-4">New Monthly Music</h5>
+                        <h5 class="center header red-text text-darken-4">Monthly Music Picks</h5>
 
                         <p class="light">Every Month we look to put our members in touch with some of the
                                 best music around and make sure you can share it with friends and family.
@@ -74,9 +74,9 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
-                    <div class="col l4 offset-l7 m6 offset-m6 s12">
+                    <div class=" right-align col l4 offset-l7 m6 offset-m6 s12">
                         <div>
-                            <h5 class="header right">Become a member to recieve free delivery with all orders.</h5>
+                            <h5 class="header">Become a member to recieve free delivery with all orders.</h5>
                         </div>
                         <div>
                             <a href="#" id="membership-button2" class="btn waves-effect waves-light red darken-4">Join the Club!</a>
@@ -87,20 +87,4 @@
         </div>
         <div class="parallax"><img src="{% static 'images/hnhbackground2.png' %}" alt="Unsplashed background img 2"></div>
     </div>
-
-    <div class="container">
-        <div class="section">
-            <div class="row">
-                <div class="col s12 center">
-                    <h3><i class="mdi-content-send header"></i></h3>
-                    <h4>Contact Us</h4>
-                    <p class="left-align light">If you wish to contact us regarding memberships, purchases or returns please email us at
-                                    customer.service@hitsnhops.com or phone us on 07894241236. We always look to resolve any issues promptly
-                                    and with our members in mind so anything we can do to help you is our pleasure. 
-                    </p>
-                </div>
-            </div>
-
-            </div>
-        </div>
 {% endblock %}
