--- a/templates/base.html
+++ b/templates/base.html
@@ -28,15 +28,19 @@
       {% block extra_meta %}
       {% endblock %}
 
-      <title>Hit 'n' Hops {% block extra_title %}{% endblock %}</title>
+      <title>Hits 'n' Hops {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
+        
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
                 <a href="{% url 'home' %}" class="logo hide-on-med-and-down">
                     <img src="{% static 'images/hnhlogo.png' %}" alt="logo"/>
                 </a>
                 <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="#"><i class="material-icons">store</i></a>
+                    </li>
                     <li>
                         <form method="GET" action="#">
                             <div class="input-group">
@@ -118,7 +122,6 @@
                 </ul>
             </div>
         </nav>
-
         
 
         {% if messages %}
@@ -131,42 +134,35 @@
         {% block content %}
         {% endblock %}
 
-        <footer class="page-footer teal">
+        <footer class="page-footer red darken-4">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
-                        <h5 class="white-text">Company Bio</h5>
-                        <p class="grey-text text-lighten-4">We are a team of college students working on this project like
-                                it's our full time job. Any amount would help support and continue development on this project
-                                and is greatly appreciated.
+                        <h5 class="white-text header center-align">Hits 'n' Hops</h5>
+                        <p class="grey-text text-lighten-4">
+                            Here at Hits 'n' Hops we aspire to connect everyone through music and beer, 
+                            which shouldn't be too difficult when you think about it. We offer our members
+                            recommended records every month which is delivered alongside 2 beers of their choice.
+                            Our members can also chat using our forums and even arrange to listen along together
+                            with our listening parties.
                         </p>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Settings</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Connect</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
+                    </div>
+                    <div class="col l6 s12">
+                        <h5 class="header center-align">Contact Us</h5>
+                        <p class="left-align light">
+                            If you wish to contact us regarding memberships, purchases or returns please email our
+                            <a href="mailto:customer.service@hitsnhops.com">Customer Service Team</a> or phone us on <a href="tel:07894241236">07894241236</a>. We always look to resolve any issues promptly
+                            and with our members in mind so anything we can do to help you is our pleasure. 
+                        </p>
+                    </div>
                 </div>
             </div>
+            <div class="footer-copyright">
+            <div class="container">
+                Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+            </div>
         </div>
-        <div class="footer-copyright">
-        <div class="container">
-            Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-        </div>
-    </div>
-</footer>
+    </footer>
 
         {% block postloadjs %}
             <script src="{% static 'js/base.js' %}"></script>
