--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,13 @@ html {
     font-family: 'Fredoka One', sans-serif;
 }
 
+.banner {
+    width: 100%;
+    height: 25px;
+    font-size: 18px;
+    z-index: 99;
+}
+
 nav ul a,
 nav .brand-logo {
     color: #444;
