--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="{% static 'images/hnhbackground.png' %}" alt="Beer Background"></div>
+        <div class="parallax bg-image"><img src="{% static 'images/hnhbackground.png' %}" alt="Beer Background"></div>
     </div>    
 
     <div class="container">
@@ -85,6 +85,6 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="{% static 'images/hnhbackground2.png' %}" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="{% static 'images/hnhbackground2.png' %}" alt="Vinyl Background"></div>
     </div>
 {% endblock %}
