--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,20 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Piazzolla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Sansita+Swashed:wght@300;400;700&display=swap');
 
 html {
-    font-family: 'Piazzolla', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     height: 100%;
     color: #444;
 }
 
 .header {
-    font-family: 'Fredoka One', sans-serif;
+    font-family: 'Sansita Swashed', sans-serif;
 }
 
-.banner {
-    width: 100%;
-    height: 25px;
-    font-size: 18px;
-    z-index: 99;
+.star {
+    font-size: 15px;
 }
 
 nav ul a,
