--- a/products/templates/products/beers.html
+++ b/products/templates/products/beers.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container center-align">
+    <div class="container">
         <div class="row">
             <div class="col">
                 <h2 class="center-align header">Beers</h2>
@@ -23,26 +23,26 @@
                     <div class="large card">
                         <div class="card-image waves-effect waves-block waves-light">
                         {% if beer.image %}
-                            <img class="activator" src="{{ beer.image_url }}" alt="{{ beer.name }}">
+                            <img class="beer-display activator" src="{{ beer.image_url }}" alt="{{ beer.name }}">
                         {% else %}
-                            <img class="activator" src="{{ MEDIA_URL }}noimage.png" alt="{{ beer.name }}">
+                            <img class="beer_display activator" src="{{ MEDIA_URL }}noimage.png" alt="{{ beer.name }}">
                         {% endif %}
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">{{ beer.name }}<i class="material-icons right">more_vert</i></span>
+                            <a href="#" class="material-icons activator right">more_vert</a>
+                            <a href="{% url 'beer_detail' beer.id %}" class="card-title grey-text text-darken-4">{{ beer.name }}</a>                   
                             <p>£{{ beer.price }}</p>
                             <p>{{ beer.abv }}%</p>
                             <p>{{ beer.volume }}ml</p>
                             <p>{{ beer.rating }}<i class="material-icons star">star</i></p>
-                            
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">{{ beer.brewery.friendly_name }}<i class="material-icons right">close</i></span>
                             <p>{{ beer.style.friendly_name }}</p>
                             <p>{{ beer.description }}</p>
                             <div class="div center-align">
-                                <a class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">add_shopping_cart</i></a>
-                                <a class="btn-floating btn-large waves-effect waves-light blue"><i class="material-icons">info_outline</i></a>
+                                <a class="beers-btn btn-floating btn-large waves-effect waves-light green"><i class="material-icons">add_shopping_cart</i></a>
+                                <a href="{% url 'beer_detail' beer.id %}" class="beers-btn btn-floating btn-large waves-effect waves-light blue"><i class="material-icons">info_outline</i></a>
                             </div>
                         </div>                        
                     </div>
