--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Sansita+Swashed:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Piazzolla:wght@300;400;700&family=Sansita+Swashed:wght@300;400;700&display=swap');
 
 html {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Piazzolla', sans-serif;
     height: 100%;
     color: #444;
 }
@@ -10,8 +10,54 @@ html {
     font-family: 'Sansita Swashed', sans-serif;
 }
 
+.dropdown-content {
+    width: 15rem!important; 
+    height: inherit!important;
+    top: -4rem;
+}
+
+/*--------------------------------------------------------------------------------------------------beers page*/
+
 .star {
     font-size: 15px;
+}
+
+.beer-display {
+    height: 19rem;
+    object-fit: contain
+}
+
+.beers-btn {
+    margin: 1rem;
+}
+
+
+
+/*--------------------------------------------------------------------------------------------------beer detail page*/
+
+
+.beer-detail {
+    padding: 6rem 2rem;
+    width: 100%;
+}
+
+.beer-image {
+    margin: 0;
+    max-height: 60vh;
+    max-width: 100%;
+}
+
+.beer-description {
+    padding: 1rem;
+}
+
+.beer-info {
+    padding: 1rem 1rem;
+}
+
+.bd-btn {
+    margin: 0.5rem 1rem;
+    width: 15rem;
 }
 
 nav ul a,
@@ -52,12 +98,6 @@ p {
     }
 }
 
-@media only screen and (max-width : 600px) {
-    #index-banner .section {
-        top: 0;
-    }
-}
-
 .icon-block {
     padding: 0 15px;
 }
@@ -67,5 +107,12 @@ p {
 }
 
 footer.page-footer {
-    margin: 0;
+    margin: 2rem 0 0;
+
+}
+
+@media (min-width: 1500px) {
+    .container {
+        width: 90%;
+    }  
 }
