--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,9 @@
                         <a class="dropdown-trigger text-black" href="#" data-target="dropdown2"><i class="material-icons">person</i>My Account</a>
                     </li>
                     <li>
+                        <a href="{% url 'beers' %}"><i class="material-icons">store</i>Beer Store</a>
+                    </li>
+                    <li>
                         <a class="{% if grand_total %} text-blue font-weight-bold {% else %} text-black {% endif %} nav-link" href="#">
                             <i class="material-icons">shopping_basket</i>My Basket
                             <p class="my-0">
@@ -96,30 +99,34 @@
                 
                 <a href="#" data-target="slide-out" class="sidenav-trigger"><img src="{% static 'images/hnhlogo.png' %}" alt="logo"/></a>
                 <!-- Dropdown Structure -->
-                <ul id="dropdown1" class="dropdown-content">
-                    {% if request.user.is_authenticated %}
-                        {% if request.user.is_superuser %}
-                            <a href="" class="dropdown-item">Product Management</a>
+                <div class="dropdown-container">    
+                    <ul id="dropdown1" class="dropdown-content">
+                        {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                                <a href="" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                         {% endif %}
-                        <a href="" class="dropdown-item">My Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                    {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                       <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                    {% endif %}
-                </ul>
-                <ul id="dropdown2" class="dropdown-content">
-                    {% if request.user.is_authenticated %}
-                        {% if request.user.is_superuser %}
-                            <a href="" class="dropdown-item">Product Management</a>
+                    </ul>
+                </div>
+                <div class="dropdown-container">
+                    <ul id="dropdown2" class="dropdown-content">
+                        {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                                <a href="" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                         {% endif %}
-                        <a href="" class="dropdown-item">My Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                    {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                       <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                    {% endif %}
-                </ul>
+                    </ul>
+                </div>
             </div>
         </nav>
         
