added search functionality

--- a/products/templates/products/beer_detail.html
+++ b/products/templates/products/beer_detail.html
@@ -27,7 +27,7 @@
                     <h5>{{ beer.brewery.friendly_name }}</h5>
                     <h6><b>Price: £{{ beer.price }}</b></h6>
                 </div>
-                <div class="beer-description">
+                <div class="beer-description left-align">
                     <h6>{{ beer.description }}</h6>
                 </div>
                  <div class="row center-align">
