--- a/products/templates/products/beers.html
+++ b/products/templates/products/beers.html
@@ -13,8 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h2 class="center-align header">Beers</h2>
-                <hr>                          
+                <h2 class="header">Beers</h2>                        
             </div>
         </div>
         <div class="row">
