added style, brewery and sort by to beers page

--- a/products/templates/products/beers.html
+++ b/products/templates/products/beers.html
@@ -12,8 +12,69 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col">
-                <h2 class="header">Beers</h2>                        
+            <h2 class="header center-align">Our Beer Collection</h2>   
+            <hr>                     
+        </div>
+        <div class="row center-align">
+            <div class="col s12 m4">
+                <a class="btn btn-pick red darken-4 large modal-trigger" href="#style">Choose Style</a>
+
+                <!-- Modal Structure -->
+                <div id="style" class="modal">
+                    <div class="modal-content">
+                        <h4>Pick Your Style</h4>
+                        {% for style in styles %}
+                            <form action="#">
+                                <p>
+                                    <label>
+                                        <input name="group1" type="radio"/>
+                                        <span>{{ style.friendly_name }}</span>
+                                    </label>
+                                </p>
+                            </form>
+                        {% endfor %}
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col s12 m4">
+                <a class="btn btn-pick large modal-trigger red darken-4" href="#brewery">Choose Brewery</a>
+
+                <!-- Modal Structure -->
+                <div id="brewery" class="modal">
+                    <div class="modal-content">
+                        <h4>Choose a Brewery</h4>
+                        {% for brewery in breweries %}
+                            <form action="#">
+                                <p>
+                                    <label>
+                                        <input name="group1" type="radio"/>
+                                        <span>{{ brewery.friendly_name }}</span>
+                                    </label>
+                                </p>
+                            </form>
+                        {% endfor %}
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>    
+            </div>
+            <div class="col s12 m4">
+                <a class="dropdown-trigger btn btn-pick large modal-trigger red darken-4" href="#" data-target="dropdown3">Sort By...</a>
+
+                <!-- Dropdown Structure -->
+                <ul id="dropdown3" class="dropdown-content">
+                        <li><a href="#!">Name</a></li>
+                        <li><a href="#!">Name</a></li>
+                        <li><a href="#!">Price</a></li>
+                        <li><a href="#!">Style</a></li>
+                        <li><a href="#!">Abv.</a></li>
+                        <li><a href="#!">Rating</li>
+                </ul>
             </div>
         </div>
         <div class="row">
@@ -45,8 +106,9 @@
                             </div>
                         </div>                        
                     </div>
-                </div>
+                </div>  
             {% endfor %}
         </div>
+        <hr>  
     </div>
 {% endblock %}
