added shopping cart app, urls and template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,6 +86,14 @@ html {
     background-color: #e53935;
 }
 
+
+/*--------------------------------------------------------------------------------------------------cart page*/
+
+.cart-container {
+    padding: 1rem;
+    align-content: center;
+}
+
 /*---------------------------------------------------------------------------------------------------parallax*/
 
 nav ul a,
